tests/ui/redefinition_of_builtin_type.ina
// COMPILE_FAIL

type i32 = {}

fn main() {}
